modified:   dojo-dungeon/src/dojo/rooms/rooms/boss/MyImpRoom.java (Paths and dialogs...) modified:   dojo-dungeon/src/starter/DojoStarter.java