@@ -130,7 +130,7 @@ public class DojoStarter {
         });
 
     // Set level 1, room 1 as start level (or start room)
-    Game.currentLevel(allLevels[0].buildRooms.getFirst().levelRoom.level());
+    Game.currentLevel(allLevels[0].buildRooms.get(0).levelRoom.level());
   }
 
   private static LevelRoomLevel[] getLevelRoomLevels() {
